@@ -1,3 +1,9 @@
+2006-10-27 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b14
+
+ * New: function toogleButton()
+
+ * New: function toogleBox()
+
 2006-10-27 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b13
 
  * Fix: Save did not work in rearrange items.
